# vectrune

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  capabilities.md  install-dev.ps1  install-dev.sh  languages.yml  parser_output.txt  release-bump.ps1  release-bump.sh  rfc.md  vectrune_docs.rune
.github/: SYNTAX_HIGHLIGHTING.md  copilot-instructions.md  copilot-local.example.md
.github/linguist/: rune.tmLanguage
.github/workflows/: release.yml
docs/debugging/: emit-function-guide.md
documents/feature_planning/: lambda_runner_contract.md  lambda_runner_plan.md  lambda_runner_story3_update.md  lambda_runner_user_stories.md
examples/: app.rune  auth_example.rune  book_graphql.rune  data.json  example.rune  i18n_demo.rune  json_import.rune  memory_api.rune  memory_from_json_api.rune  reactivity-contract-rune-web.rune  retro_game.rune  skateboarders.rune  skaters.json  user_api.rune  web.rune
examples/merge/: README.md  base.rune  config.yaml  config_alt.yaml  external_data.json  ip-list.yaml  patch.rune
examples/test_multi_file_rune/: file1.rune  file2.rune
examples/tic_tac_toe/: README.md  preview.html  tic_tac_toe.rune
examples/vect/: README.md  builtins_demo.vect  contains_demo.vect  counter.vect  interpolation.vect  introducing.vect
examples/vectrune/: README.md  form.rune  onboarding.rune  poids.rune  qa.rune  together.we.are.vectrune
examples/worm_game/: worm_colors.json  worm_game.rune
knowledge/: README.md  manifest.yaml
knowledge/agents/: maintenance.md  rune-web-implementation-phase1-2.md
knowledge/examples/: curated-examples.md
knowledge/language/: core-language.md  css-tokens-presets.md  javascript-runtime.md  memory-hooks.md  parser-conditional-in-series.md  reactive-memory.md  rune-web-architecture.md  vect-scripts.md  vectrune-scripts.md
knowledge/languages/: en.rune  fr.rune
knowledge/product/: mass-adoption.md  overview.md
knowledge/reference/: app-types.yaml  builtins.yaml  examples.yaml  intents.md  runtime-context.yaml
knowledge/runtime/: cli.md  execution-engine.md
language/docs/: index.html
rune-vscode/: README.md  language-configuration.json  package.json
runtime/rune-emulator/: build.mjs  package-lock.json  package.json  tsconfig.json
runtime/rune-web/: build.mjs  package-lock.json  package.json  tsconfig.json
src/: arithmetic.rs  builtins.rs  crud_web_fe.rs  example.rs  lambda_handler.rs  lambda_main.rs  lib.rs  main.rs  rune_ast.rs  rune_parser.rs  runtime.rs  util.rs  wasm.rs
src/apps/: mod.rs
src/builtins/: path_utils.rs
src/cli/: ai.rs  calculate.rs  hooks_commands.rs  knowledge.rs  lambda.rs  merge.rs  mod.rs  repl.rs  transform.rs  vect.rs  vectrune.rs  watch.rs
src/core/: mod.rs
src/execution/: ir.rs  mod.rs  runtime.rs
src/lambda_main/: aws_lambda.rs
src/memory/: hook_context.rs  hook_parser.rs  hooks.rs  mod.rs  reactive.rs
src/vectrune/: ast.rs  compiler.rs  definition.rs  mod.rs  (+4 more)
teaching_website/: I18N_QUICK_REF.md  LOCALIZATION.md  index.html  rune-emulator.js  sandbox.js  style.css  syntax-highlight.css  syntax-highlight.js  teaching.rune  wasm-init.js
tests/: arithmetic_assignment_test.rs  arithmetic_engine_test.rs  conditional_in_series_test.rs  deep_nesting_test.rs  emit_function_test.rs  hooks_integration_test.rs  html_output_cli.rs  imports_test.rs  integration_app.rs  integration_book_graphql.rs  integration_cli.rs  integration_graphql.rs  integration_user_api.rs  integration_vect_cli.rs  integration_vectrune_cli.rs  lambda_handler.rs  lambda_package.rs  logger_parameter_expansion_test.rs  merge_tests.rs  parser_object_assignment_regression.rs  reactivity_contract_test.rs  simple_4level_nesting_test.rs  worm_game_path_regression.rs  ws_broadcast_test.rs
(+164 files in other folders)
