[package]
name = "rune-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
thiserror = "1"
anyhow = "1"
clap = "4.5.54"
csv = "1.4.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http = "1"
hyper = "1"
uuid = { version = "1", features = ["v4"] }

