[package]
name = "rune-runtime"
version = "0.1.2"
edition = "2021"
authors = ["David Thomas"]
description = "Vectrune: Structured data in motion."
repository = "https://github.com/davethomas11/rune"
license = "MIT"

[[bin]]
name = "vectrune"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4"
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.33"
thiserror = "1"
anyhow = "1"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "mysql"] }
async-recursion = "1.1.1"
tower-http = { version = "0.6.8", features = ["fs"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.43"
base64 = "0.22.1"
async-graphql = "7.0.2"
async-graphql-axum = "7.0.2"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http = "1"
uuid = { version = "1", features = ["v4"] }

