[package]
name = "rune-runtime"
version = "0.2.3"
edition = "2021"
authors = ["David Thomas"]
description = "Vectrune: Structured data in motion."
repository = "https://github.com/davethomas11/rune"
license = "MIT"

[[bin]]
name = "vectrune"
path = "src/main.rs"

[dependencies]
indicatif = "0.17"
lazy_static = "1.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.33"
thiserror = "1"
anyhow = "1"
http = "1"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
async-recursion = "1.1.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.43"
base64 = "0.22.1"
async-graphql = "7.0.2"
walkdir = "2"
tower = { version = "0.5.3", features = ["util"] }
async-trait = "0.1"
once_cell = "1.21.4"
regex = "1.12.3"
uuid = { version = "1", features = ["v4", "js"] }
futures = "0.3"
rust-embed = "8.0"

# Non-Wasm dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "mysql"] }
tower-http = { version = "0.6.8", features = ["fs"] }
async-graphql-axum = "7.0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"
tar = "0.4"
flate2 = "1"
lambda_runtime = "0.11"
aws_lambda_events = "0.13"
notify = "6"

# Wasm dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlTextAreaElement"] }
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1", features = ["sync"] } # Minimal tokio for wasm if needed

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http = "1"
uuid = { version = "1", features = ["v4", "js"] }
assert_cmd = "2"

